--- a/cv.html
+++ b/cv.html
@@ -1,1 +1,47 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Darconex</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/x-styles.css">
+    <script src="js/script.js"></script>
+    <style>
+        .nav-link-disabled {
+            color: inherit;
+            text-decoration: none;
+            cursor: default;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="light"></div>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">Cyber</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">À Propos</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/formation.html" class="sub-link">Formation</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/certificat.html" class="sub-link">Certificat</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
+</html>
