--- a/certificat.html
+++ b/certificat.html
@@ -11,7 +11,7 @@
         .nav-link-disabled {
             color: inherit;
             text-decoration: none;
-            cursor: default.
+            cursor: default;
         }
     </style>
 </head>
@@ -22,18 +22,28 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item">
-                    <span class="nav-link nav-link-disabled">Cyber</span> <!-- Lien désactivé -->
+                    <span class="nav-link nav-link-disabled">Cyber</span>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">À Propos</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/formation.html" class="sub-link">Formation</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/certificat.html" class="sub-link">Certificat</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="https://darconex.github.io/a-propos" class="nav-link">À Propos</a></li>
             </ul>
         </nav>
     </header>
+</body>
     <section>
         <h2>Certifications</h2>
         <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
