--- a/a-propos.html
+++ b/a-propos.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darconex</title>
-    <link rel="stylesheet" href="css\styles.css">
-    <link rel="stylesheet" href="css\x-styles.css">
-    <script src="js\script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/x-styles.css">
+    <script src="js/script.js"></script>
     <style>
         .nav-link-disabled {
             color: inherit;
@@ -22,17 +22,38 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
                 <li class="nav-item">
-                    <span class="nav-link nav-link-disabled">Cyber</span> <!-- Lien désactivé -->
+                    <span class="nav-link nav-link-disabled">Cyber</span>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
                         <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
+                <li class="nav-item">
+                    <span class="nav-link nav-link-disabled">À Propos</span>
+                    <ul class="sub-menu">
+                        <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/formation.html" class="sub-link">Formation</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/certificat.html" class="sub-link">Certificat</a></li>
+                        <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="https://darconex.github.io/a-propos" class="nav-link">À Propos</a></li>
             </ul>
         </nav>
     </header>
+
+    <!-- Section des certificats placée sous le menu -->
+    <section class="certificates">
+        <p>Date de délivrance : janv. 2023 – SecNum ANSSI – Agence nationale de la sécurité des systèmes d’information</p>
+        <p>Date de délivrance : janv. 2023 – TEHTRIS DATA SCIENCE</p>
+        <p>Date de délivrance : janv. 2023 – TEHTRIS SOARTEHTRIS</p>
+        <p>Date de délivrance : sept. 2022 – TEHTRIS XDR Niveau 1</p>
+        <p>Date de délivrance : sept. 2022 – TEHTRIS UES Niveau 2</p>
+        <p>Date de délivrance : janv. 2023 – Vade Secure Cloud Administration</p>
+        <p>Date de délivrance : janv. 2023 – Vade for M365 Administration</p>
+        <p>Date de délivrance : juil. 2020 – Loi de Programmation militaire – Formation SSI/LPM</p>
+    </section>
 </body>
 </html>
