--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Déroulant - Darconex</title>
+    <title>Darconex</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/x-styles.css">
     <link rel="icon" href="img/logo.png" title="logo">
@@ -14,90 +14,41 @@
             margin: 0;
             display: flex;
             flex-direction: column;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
         }
-        header {
-            background-color: #333;
-            padding: 10px;
-        }
-        .navbar ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
+        body {
+            flex: 1;
             display: flex;
-            justify-content: space-around;
-            background-color: #444;
-        }
-        .navbar ul li {
-            display: inline;
-        }
-        .navbar ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 14px 20px;
-            display: block;
-        }
-        .navbar ul li a:hover {
-            background-color: #555;
+            justify-content: center;
+            align-items: center;
         }
         .nav-link-disabled {
             color: inherit;
             text-decoration: none;
             cursor: default;
         }
-        .content {
-            flex: 1;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            background-color: #f4f4f4;
-        }
-        .cv-container {
-            max-width: 800px;
-            width: 100%;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .scrolling-section {
-            max-height: 400px;
-            overflow-y: auto;
-            padding-right: 10px;
-        }
-        .scrolling-section::-webkit-scrollbar {
-            width: 6px;
-        }
-        .scrolling-section::-webkit-scrollbar-thumb {
-            background-color: #007BFF;
-            border-radius: 10px;
-        }
-        .experience {
-            margin-bottom: 20px;
-        }
-        .job-title {
-            font-size: 18px;
-            font-weight: bold;
-            color: #007BFF;
-        }
-        .job-details {
-            margin-top: 5px;
-        }
         footer {
             text-align: center;
             padding: 10px;
             background-color: #403f3f;
-            color: white;
             font-size: 0.9em;
             position: relative;
             bottom: 0;
             width: 100%;
         }
+        .content {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            padding: 20px;
+        }
     </style>
 </head>
 <body>
-
     <header>
+        <div class="light"></div>
         <nav class="navbar">
             <ul class="nav-list">
                 <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
@@ -123,63 +74,19 @@
             </ul>
         </nav>
     </header>
-
     <div class="content">
-        <div class="cv-container">
-            <h1>Mon CV</h1>
-            <div class="scrolling-section">
-                <div class="experience">
-                    <div class="job-title">Analyste SOC / Cybersécurité - SEA TPI</div>
-                    <div class="job-details">
-                        <strong>CDI</strong><br>
-                        De avril 2022 à aujourd'hui · 2 ans 6 mois · Paris · Hybride
-                        <ul>
-                            <li>Traitement des alertes de sécurité</li>
-                            <li>Analyse, qualification et réponse aux incidents de sécurité</li>
-                            <li>Technologies éditeurs (SIEM, EPP, EDR, Protection de la messagerie)</li>
-                            <li>Investigation sur Open Source Intelligence (OSINT)</li>
-                            <li>Gestion de crise et astreinte pour le N1</li>
-                        </ul>
-                    </div>
-                </div>
+        <h2>Charte de Non-Clause</h2>
+        <p>&loz; Respecter les lois et réglementations en vigueur en matière de cybersécurité et de protection des données. &loz;</p>
+        <p>&loz; Ne pas s’engager dans des activités de piratage informatique, de vol de données, de déni de service ou d’autres actions malveillantes visant à compromettre la sécurité informatique d’autrui. &loz;</p>
+        <p>&loz; Protéger les actifs numériques et les données confidentielles de l’entreprise. &loz;</p>
+        <p>&loz; Signaler toute faille de sécurité, tout incident ou toute activité suspecte à l’équipe de sécurité informatique de l’entreprise. &loz;</p>
+        <p>&loz; Participer à des programmes de sensibilisation à la sécurité informatique et à la formation continue pour rester informé des meilleures pratiques en matière de cybersécurité. &loz;</p>
 
-                <div class="experience">
-                    <div class="job-title">Technicien N2 - AVIVA France</div>
-                    <div class="job-details">
-                        <strong>CDI</strong><br>
-                        D'août 2021 à mars 2022 · 8 mois · Bois-Colombes, Île-de-France
-                        <ul>
-                            <li>Création de procédures</li>
-                            <li>Déplacement multi-sites</li>
-                            <li>Gestion demandes et incidents</li>
-                            <li>Rapport Backlog et SLA</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <div class="experience">
-                    <div class="job-title">Technicien de Proximité N2, utilisateur et VIP - Groupe BPCE-IT</div>
-                    <div class="job-details">
-                        <strong>CDI</strong><br>
-                        De juillet 2017 à août 2021 · 4 ans 2 mois · Paris
-                        <ul>
-                            <li>Préparation des postes</li>
-                            <li>Gestion demandes et incidents</li>
-                            <li>Intervention réseau</li>
-                            <li>Gestion d’équipe sur site et à distance</li>
-                        </ul>
-                    </div>
-                </div>
-
-                <!-- Ajoutez d'autres expériences ici -->
-
-            </div>
-        </div>
+        <h3>Conséquences de la violation</h3>
+        <p>&loz; En cas de violation de cette Charte, les parties signataires reconnaissent que des mesures disciplinaires appropriées seront prises conformément aux politiques internes de l’entreprise. De plus, les parties peuvent être passibles de poursuites judiciaires en cas de violation des lois en vigueur. &loz;</p>
     </div>
-
     <footer>
         &copy; 2024 Darconex. Tous droits réservés.
     </footer>
-
 </body>
 </html>
