--- a/cv.html
+++ b/cv.html
@@ -3,29 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darconex</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/x-styles.css">
+    <title>Darconex - Cybersécurité</title>
     <link rel="icon" href="img/logo.png" title="logo">
-    <script src="js/script.js"></script>
     <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            font-family: Arial, sans-serif;
+        /* Style général pour tous les écrans */
+        html {
+            scroll-behavior: smooth;
         }
         body {
-            flex: 1;
+            height: 100%;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            overflow-y: scroll; /* Défilement activé */
+            -webkit-overflow-scrolling: touch; /* Défilement fluide sur iOS */
         }
-
-        /* Style général pour tous les écrans */
         .navbar {
             background-color: #282828;
             padding: 15px;
         }
-
         .nav-list {
             list-style: none;
             margin: 0;
@@ -33,44 +30,35 @@
             display: flex;
             justify-content: space-around;
         }
-
         .nav-item {
             margin: 0 10px;
         }
-
         .nav-link {
             color: white;
             text-decoration: none;
         }
-
         .nav-link-disabled {
             color: inherit;
             text-decoration: none;
             cursor: default;
         }
-
         .content {
             flex: 1;
             padding: 20px;
         }
-
         h2 {
             color: #333;
         }
-
         ul {
             list-style-type: disc;
             padding-left: 20px;
         }
-
         .section {
             margin-bottom: 20px;
         }
-
         .job-info {
             color: #666;
         }
-
         footer {
             text-align: center;
             padding: 10px;
@@ -88,19 +76,15 @@
                 flex-direction: column;
                 align-items: center;
             }
-
             .nav-item {
                 margin-bottom: 15px;
             }
-
             .content {
                 padding: 10px;
             }
-
             ul {
                 padding-left: 15px;
             }
-
             footer {
                 font-size: 0.8em;
             }
@@ -111,19 +95,15 @@
                 flex-direction: column;
                 align-items: center;
             }
-
             .nav-item {
                 margin-bottom: 10px;
             }
-
             .content {
                 padding: 5px;
             }
-
             ul {
                 padding-left: 10px;
             }
-
             footer {
                 font-size: 0.7em;
             }
