--- a/cv.html
+++ b/cv.html
@@ -3,174 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darconex - Cybersécurité</title>
-    <link rel="icon" href="img/logo.png" title="logo">
+    <title>Défilement sur Mobile</title>
     <style>
-        /* Style général pour tous les écrans */
         html {
             scroll-behavior: smooth;
         }
         body {
-            height: 100%;
             margin: 0;
             font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            overflow-y: scroll; /* Défilement activé */
-            -webkit-overflow-scrolling: touch; /* Défilement fluide sur iOS */
+            overflow-y: scroll;
+            -webkit-overflow-scrolling: touch; /* Smooth scrolling for iOS */
         }
-        .navbar {
-            background-color: #282828;
-            padding: 15px;
-        }
-        .nav-list {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: space-around;
-        }
-        .nav-item {
-            margin: 0 10px;
-        }
-        .nav-link {
-            color: white;
-            text-decoration: none;
-        }
-        .nav-link-disabled {
-            color: inherit;
-            text-decoration: none;
-            cursor: default;
-        }
-        .content {
-            flex: 1;
-            padding: 20px;
-        }
-        h2 {
-            color: #333;
-        }
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
+        .scrollable-content {
+            height: 300px; /* Fixed height */
+            overflow-y: auto;
+            background-color: #f4f4f4;
+            padding: 10px;
+            -webkit-overflow-scrolling: touch; /* Ensures smooth scrolling on mobile */
         }
         .section {
             margin-bottom: 20px;
         }
-        .job-info {
-            color: #666;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #403f3f;
-            color: white;
-            font-size: 0.9em;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-
-        /* Media queries pour les téléphones */
-        @media (max-width: 768px) {
-            .nav-list {
-                flex-direction: column;
-                align-items: center;
-            }
-            .nav-item {
-                margin-bottom: 15px;
-            }
-            .content {
-                padding: 10px;
-            }
-            ul {
-                padding-left: 15px;
-            }
-            footer {
-                font-size: 0.8em;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .nav-list {
-                flex-direction: column;
-                align-items: center;
-            }
-            .nav-item {
-                margin-bottom: 10px;
-            }
-            .content {
-                padding: 5px;
-            }
-            ul {
-                padding-left: 10px;
-            }
-            footer {
-                font-size: 0.7em;
-            }
-        }
     </style>
 </head>
 <body>
+
     <header>
-        <div class="light"></div>
-        <nav class="navbar">
-            <ul class="nav-list">
-                <li class="nav-item"><a href="https://darconex.github.io" class="nav-link">Accueil</a></li>
-                <li class="nav-item">
-                    <span class="nav-link nav-link-disabled">Cyber</span>
-                    <ul class="sub-menu">
-                        <li class="sub-item"><a href="https://darconex.github.io/groups/cyber" class="sub-link">Data Cyber</a></li>
-                        <li class="sub-item"><a href="https://darconex.github.io/groups/team" class="sub-link">Team</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a href="https://darconex.com" class="nav-link">Pro</a></li>
-                <li class="nav-item">
-                    <span class="nav-link nav-link-disabled">À Propos</span>
-                    <ul class="sub-menu">
-                        <li class="sub-item"><a href="https://darconex.github.io/charte.html" class="sub-link">Charte</a></li>
-                        <li class="sub-item"><a href="https://darconex.github.io/loi-cybersecurite.html" class="sub-link">Loi sur la cybersécurité</a></li>
-                        <li class="sub-item"><a href="https://darconex.github.io/formation.html" class="sub-link">Formation</a></li>
-                        <li class="sub-item"><a href="https://darconex.github.io/certificat.html" class="sub-link">Certificat</a></li>
-                        <li class="sub-item"><a href="https://darconex.github.io/cv.html" class="sub-link">CV</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Défilement avec le doigt</h1>
     </header>
-    
-    <div class="content">
+
+    <div class="scrollable-content">
         <div class="section">
-            <h2>Analyste SOC / Cybersécurité</h2>
-            <p class="job-info">CDI - De avril 2022 à aujourd'hui · 2 ans 6 mois · Paris · Hybride</p>
-
-            <h3>SOC Analyste N2</h3>
-            <ul>
-                <li>Traitement des alertes de sécurité</li>
-                <li>Analyse, qualification et réponse aux incidents de sécurité</li>
-                <li>Technologies éditeurs (SIEM, EPP, EDR, Protection de la messagerie et scanner de vulnérabilités)</li>
-                <li>Investigation sur Open Source Intelligence (OSINT)</li>
-                <li>Cyber Threat Intelligence / Threat Hunting</li>
-                <li>Gestion de crise</li>
-                <li>Astreinte pour le N1</li>
-            </ul>
-
-            <h3>Projet et Intégration</h3>
-            <ul>
-                <li>Création de Template, procédure et documents techniques</li>
-                <li>Mise en place d'un journal sur l'intranet (CyberVeille, Alerte CVE, Cyber Actu, Patch Tuesday)</li>
-            </ul>
-
-            <h3>Technologie</h3>
-            <p>Solutions de sécurité suivantes :</p>
-            <ul>
-                <li>Tehtris, Sophos, Azure AD, Microsoft Defender, Vade Cloud, Graylog, TheHive, Elastic, Withsecure, LogPoint, CrowdStrike, Q-Radar, HarfangLab, Riot, Cyberwatch</li>
-            </ul>
+            <h2>Section 1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac lorem nunc. Nullam non dui a justo gravida vehicula.</p>
+        </div>
+        <div class="section">
+            <h2>Section 2</h2>
+            <p>Aliquam erat volutpat. Donec aliquet felis sed enim sagittis vehicula. Suspendisse potenti.</p>
+        </div>
+        <div class="section">
+            <h2>Section 3</h2>
+            <p>Vivamus fringilla turpis ut arcu tincidunt, at ullamcorper eros accumsan.</p>
+        </div>
+        <div class="section">
+            <h2>Section 4</h2>
+            <p>Mauris consequat ligula ut felis varius, ut vestibulum purus egestas.</p>
         </div>
     </div>
 
-    <footer>
-        &copy; 2024 Darconex. Tous droits réservés.
-    </footer>
 </body>
 </html>
